# Attractors-ILP

./: CMakeLists.txt  README.md  main.cpp
include/: BoolExprEvaluator.h  BooleanNetwork.h  Node.h  SolutionObjects.h  expressionparser.h
src/: BooleanExprEval.cpp  BooleanNetwork.cpp  ILPModelBuilder.cpp  IncludingSolutions.cpp  Node.cpp  SolutionObjects.cpp  expressionparser.cpp  reachability.cpp
